# Location-Agent-Management-System

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: validate-compose.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/application/dtos/: auth.py
backend/app/application/services/: agent_service.py  assignment_service.py  auth_service.py  dashboard_service.py  location_service.py
backend/app/core/: config.py  dependencies.py  exceptions.py  security.py
backend/app/domain/entities/: agent.py  assignment.py  common.py  location.py  user.py
backend/app/domain/repositories/: protocols.py
backend/app/infrastructure/db/: models.py  seed.py  session.py
backend/app/infrastructure/repositories/: sqlalchemy_agent_repository.py  sqlalchemy_assignment_repository.py  sqlalchemy_location_repository.py  sqlalchemy_user_repository.py
backend/app/presentation/api/v1/: agents.py  assignments.py  auth.py  dashboard.py  locations.py  router.py  schemas.py
backend/tests/: conftest.py  test_agent_service.py  test_assignment_service.py  test_auth_service.py  test_dashboard_service.py  test_location_service.py
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  router.tsx  theme.ts
frontend/src/components/: agent-form-dialog.tsx  assignment-form-dialog.tsx  confirm-dialog.tsx  location-form-dialog.tsx  stat-card.tsx
frontend/src/layouts/: app-shell.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: agents-page.tsx  login-page.tsx  (+3 more)
(+2 files in other folders)
